- (getdiskspace) v44 compliant (WHDLOpener).
- (trace) implemented (v44).
- (retrace) implemented (v44).
- (openwbobject) implemented (v44).
- (showwbobject) implemented (v44).
- (closewbobject) implemented (v44).
- (reboot) implemented (v44).
- (copyfiles) (back) option implemented (v44).
- (copylib) (back) option implemented (v44).
- (delete) (back) option implemented (v44).
- (execute) (back) option implemented (v44).
- (makedir) (back) option implemented (v44).
- (message) (back) option implemented (v44).
- (rename) (back) option implemented (v44).
- (textfile) (back) option implemented (v44).
- (askdir) (back) option implemented (v44).
- (askfile) (back) option implemented (v44).
- (askstring) (back) option implemented (v44).
- (asknumber) (back) option implemented (v44).
- (askchoice) (back) option implemented (v44).
- (askoptions) (back) option implemented (v44).
- (askbool) (back) option implemented (v44).
- (askdisk) (back) option implemented (v44).

0.1.0-alpha.34:
===============
- (effect) partial (no radial / position) implementation (v44).
- (showmedia) partial implementation (image support) (v44).
- (closemedia) implemented (v44).
- (tackon) parent fix (WormWars).
- @installer-version bumped from 43.3 to 44.10

0.1.0-alpha.35:
===============
- Improved robustness.
- Local variables handling / recursion fix.
- File permission workaround / cheat.
- (exists) now supports undocumented (quiet) == (noreq) (CubicIDE_HW80).

0.1.0-alpha.36:
===============
- Improved robustness.
- (getversion) fix.
- Less strict string formating. Just like CBM wanted it.
- String evaluation fix (IBrowse).

0.1.0-alpha.37:
===============
- (getversion) device and library support.
- (copyfiles) (info) combination fix (MicroDot II 1.4 and DockBot 1.0).
- (startup) confirmation level fix.
- (retrace) scope fix (Grunch).

0.1.0-alpha.38:
===============
- Dynamic options single branch fix (rc-ftpd).
- @icon now contains absolute path also when started from CLI.