@@ -242,3 +242,5 @@
 ===============
 - Dynamic options single branch fix (rc-ftpd).
 - @icon now contains absolute path also when started from CLI.
+- All pattern matching is now case insensitive.
+-
